syntax = "proto3";
option go_package = "practice-golang/inventory/api";
package api;

message GetQuantityRequest{
    string sku = 1;
}
message GetQuantityResponse{
    int32 quantity = 1;
}
message UpdateQuantityRequest{
    string sku = 1;
    // so luong tang hay giam
    int32 quantity = 2;
}
message UpdateQuantityResponse{
    string sku = 1;
    // so luong ton kho sau khi update
    int32 quantity = 2;
}
service Inventory{
    rpc GetQuantity(GetQuantityRequest) returns (GetQuantityResponse){}
    rpc UpdateQuantity(UpdateQuantityRequest) returns (UpdateQuantityResponse){}
}